Modified shellscript command-line generation to better support unusual symbols.